--- a/Multiplicity.Packets/Multiplicity.Packets.csproj
+++ b/Multiplicity.Packets/Multiplicity.Packets.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -43,10 +43,14 @@
     <Compile Include="Deprecated.cs" />
     <Compile Include="Extensions\Byte.Extensions.cs" />
     <Compile Include="MinionAttackTargetUpdate.cs" />
+    <Compile Include="Models\LiquidUpdate.cs" />
     <Compile Include="Models\Tile.cs" />
     <Compile Include="AlterItemDrop.cs" />
     <Compile Include="GetChestName.cs" />
     <Compile Include="ModifyTile.cs" />
+    <Compile Include="NetLiquidModule.cs" />
+    <Compile Include="NetTextModule.cs" />
+    <Compile Include="NetworkModuleTypes.cs" />
     <Compile Include="NPCUpdate.cs" />
     <Compile Include="Null.cs" />
     <Compile Include="PlaceChest.cs" />
@@ -57,6 +61,9 @@
     <Compile Include="ReleaseNPC.cs" />
     <Compile Include="SetChestName.cs" />
     <Compile Include="SyncEmoteBubble.cs" />
+    <Compile Include="TerrariaNetModule.cs" />
+    <Compile Include="TerrariaNetworkObject.cs" />
+    <Compile Include="UnknownNetModule.cs" />
     <Compile Include="UpdatePlayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerrariaPacket.cs" />
